--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
           <h2 class="visually-hidden">x</h2>
           <ul class="page-menu-list">
             <li class="menu-li">
+              <svg class="first-icons" viewBox="-15 -15 64 64">
+                <use href="/images/sprite.svg#icon-antenna"></use>
+              </svg>
               <h3 class="menu-li-h">Strategy</h3>
               <p>
                 Our goal is to identify the business problem to walk away with
@@ -63,6 +66,9 @@
               </p>
             </li>
             <li class="menu-li">
+              <svg class="first-icons" viewBox="80 -15 64 64">
+                <use href="/images/sprite.svg#icon-clock"></use>
+              </svg>
               <h3 class="menu-li-h">Punctuality</h3>
               <p>
                 Bring the key message to the brand's audience for the best price
@@ -70,6 +76,9 @@
               </p>
             </li>
             <li class="menu-li">
+              <svg class="first-icons" viewBox="-10 -15 64 64">
+                <use href="/images/sprite.svg#icon-graph"></use>
+              </svg>
               <h3 class="menu-li-h">Diligence</h3>
               <p>
                 Research and confirm brands that present the strongest digital
@@ -77,6 +86,9 @@
               </p>
             </li>
             <li class="menu-li">
+              <svg class="first-icons" viewBox="30 -15 64 64">
+                <use href="/images/sprite.svg#icon-astronaut"></use>
+              </svg>
               <h3 class="menu-li-h">Technologies</h3>
               <p>
                 Design practice focused on digital experiences. We bring forth a
