--- a/images/sprite.html
+++ b/images/sprite.html
@@ -67,14 +67,6 @@
     <div class="clearfix mhl">
         <h1>Grid Size: 0</h1>
         <div class="cell fs1">
-            <span class="icon icon-Ellipse"></span>
-            icon-Ellipse
-        </div>
-        <div class="cell fs1">
-            <span class="icon icon-graph"></span>
-            icon-graph
-        </div>
-        <div class="cell fs1">
             <span class="icon icon-antenna"></span>
             icon-antenna
         </div>
@@ -85,6 +77,30 @@
         <div class="cell fs1">
             <span class="icon icon-clock"></span>
             icon-clock
+        </div>
+        <div class="cell fs1">
+            <span class="icon icon-facebook"></span>
+            icon-facebook
+        </div>
+        <div class="cell fs1">
+            <span class="icon icon-graph"></span>
+            icon-graph
+        </div>
+        <div class="cell fs1">
+            <span class="icon icon-instagram"></span>
+            icon-instagram
+        </div>
+        <div class="cell fs1">
+            <span class="icon icon-linkedin"></span>
+            icon-linkedin
+        </div>
+        <div class="cell fs1">
+            <span class="icon icon-twitter"></span>
+            icon-twitter
+        </div>
+        <div class="cell fs1">
+            <span class="icon icon-Ellipse"></span>
+            icon-Ellipse
         </div>
   </div>
 
