--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               </p>
             </li>
             <li class="menu-li">
-              <svg class="first-icons" viewBox="10 -15 64 64">
+              <svg viewBox="0 0 75 32">
                 <use href="/images/sprite.svg#icon-clock"></use>
               </svg>
               <h3 class="menu-li-h">Punctuality</h3>
@@ -86,8 +86,8 @@
               </p>
             </li>
             <li class="menu-li">
-              <svg class="first-icons" viewBox="120 -15 64 64">
-                <use href="/images/sprite.svg#icon-astronaut"></use>
+              <svg viewBox="0 0 75 32">
+                <use href="/images/icons.svg#icon-astronaut"></use>
               </svg>
               <h3 class="menu-li-h">Technologies</h3>
               <p>
