section-two-done

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
           <h2 class="visually-hidden">x</h2>
           <ul class="page-menu-list">
             <li class="menu-li">
-              <svg class="first-icons" viewBox="80 -15 64 64">
-                <use href="/images/sprite.svg#icon-antenna"></use>
+              <svg class="first-icons" viewBox="0 0 75 32">
+                <use href="images/sprite.svg#icon-antenna"></use>
               </svg>
               <h3 class="menu-li-h">Strategy</h3>
               <p>
@@ -66,8 +66,8 @@
               </p>
             </li>
             <li class="menu-li">
-              <svg viewBox="0 0 75 32">
-                <use href="/images/sprite.svg#icon-clock"></use>
+              <svg class="first-icons" viewBox="192 0 75 32">
+                <use href="images/sprite.svg#icon-clock"></use>
               </svg>
               <h3 class="menu-li-h">Punctuality</h3>
               <p>
@@ -76,8 +76,8 @@
               </p>
             </li>
             <li class="menu-li">
-              <svg class="first-icons" viewBox=" 30 -15 64 64">
-                <use href="/images/sprite.svg#icon-graph"></use>
+              <svg class="first-icons" viewBox="336 0 75 32">
+                <use href="images/sprite.svg#icon-graph"></use>
               </svg>
               <h3 class="menu-li-h">Diligence</h3>
               <p>
@@ -86,8 +86,8 @@
               </p>
             </li>
             <li class="menu-li">
-              <svg viewBox="0 0 75 32">
-                <use href="/images/icons.svg#icon-astronaut"></use>
+              <svg class="first-icons" viewBox="96 0 75 32">
+                <use href="images/sprite.svg#icon-astronaut">
               </svg>
               <h3 class="menu-li-h">Technologies</h3>
               <p>
@@ -107,6 +107,9 @@
               <div class="member-cards">
                 <h3 class="members">Mark Guerrero</h3>
                 <p class="position">Product Designer</p>
+                <svg class="second-icons" viewBox="400 0 32 32">
+                  <use href="images/sprite.svg#icon-instagram"></use>
+                </svg>
               </div>
             </li>
             <li class="team-members">
