--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             </li>
             <li class="menu-li">
               <svg class="first-icons" viewBox="96 0 75 32">
-                <use href="images/sprite.svg#icon-astronaut">
+                <use href="images/sprite.svg#icon-astronaut"></use>
               </svg>
               <h3 class="menu-li-h">Technologies</h3>
               <p>
@@ -107,9 +107,28 @@
               <div class="member-cards">
                 <h3 class="members">Mark Guerrero</h3>
                 <p class="position">Product Designer</p>
-                <svg class="second-icons" viewBox="400 0 32 32">
-                  <use href="images/sprite.svg#icon-instagram"></use>
-                </svg>
+                <ul class="social">
+                  <li class="social-icons">
+                    <svg class="second-icons" viewBox="0 0 32 32">
+                      <use href="images/sprite.svg#icon-Ellipse"></use>
+                    </svg>
+                  </li>
+                  <li class="social-icons">
+                    <svg class="second-icons" viewBox="0 0 32 32">
+                      <use href="images/sprite.svg#icon-twitter"></use>
+                    </svg>
+                  </li>
+                  <li class="social-icons">
+                    <svg class="second-icons" viewBox="0 0 32 32">
+                      <use href="images/sprite.svg#icon-facebook"></use>
+                    </svg>
+                  </li>
+                  <li class="social-icons">
+                    <svg class="second-icons" viewBox="0 0 32 32">
+                      <use href="images/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-members">
