--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <h2 class="visually-hidden">x</h2>
           <ul class="page-menu-list">
             <li class="menu-li">
-              <svg class="first-icons" viewBox="0 0 75 32">
+              <svg class="first-icons" viewBox="288 0 75 32">
                 <use href="images/sprite.svg#icon-antenna"></use>
               </svg>
               <h3 class="menu-li-h">Strategy</h3>
@@ -76,7 +76,7 @@
               </p>
             </li>
             <li class="menu-li">
-              <svg class="first-icons" viewBox="336 0 75 32">
+              <svg class="first-icons" viewBox="48 0 75 32">
                 <use href="images/sprite.svg#icon-graph"></use>
               </svg>
               <h3 class="menu-li-h">Diligence</h3>
@@ -86,7 +86,7 @@
               </p>
             </li>
             <li class="menu-li">
-              <svg class="first-icons" viewBox="96 0 75 32">
+              <svg class="first-icons" viewBox="384 0 75 32">
                 <use href="images/sprite.svg#icon-astronaut"></use>
               </svg>
               <h3 class="menu-li-h">Technologies</h3>
@@ -109,12 +109,12 @@
                 <p class="position">Product Designer</p>
                 <ul class="social">
                   <li class="social-icons">
-                    <svg class="second-icons" viewBox="0 0 32 32">
-                      <use href="images/sprite.svg#icon-Ellipse"></use>
+                    <svg class="second-icons" viewBox="144 0 32 32">
+                      <use href="images/sprite.svg#icon-instagram"></use>
                     </svg>
                   </li>
                   <li class="social-icons">
-                    <svg class="second-icons" viewBox="0 0 32 32">
+                    <svg class="second-icons" viewBox="240 0 32 32">
                       <use href="images/sprite.svg#icon-twitter"></use>
                     </svg>
                   </li>
@@ -124,7 +124,7 @@
                     </svg>
                   </li>
                   <li class="social-icons">
-                    <svg class="second-icons" viewBox="0 0 32 32">
+                    <svg class="second-icons" viewBox="192 0 32 32">
                       <use href="images/sprite.svg#icon-linkedin"></use>
                     </svg>
                   </li>
@@ -136,6 +136,28 @@
               <div class="member-cards">
                 <h3 class="members">Tom Ford</h3>
                 <p class="position">Frontend Developer</p>
+                <ul class="social">
+                  <li class="social-icons">
+                    <svg class="second-icons" viewBox="144 0 32 32">
+                      <use href="images/sprite.svg#icon-instagram"></use>
+                    </svg>
+                  </li>
+                  <li class="social-icons">
+                    <svg class="second-icons" viewBox="240 0 32 32">
+                      <use href="images/sprite.svg#icon-twitter"></use>
+                    </svg>
+                  </li>
+                  <li class="social-icons">
+                    <svg class="second-icons" viewBox="0 0 32 32">
+                      <use href="images/sprite.svg#icon-facebook"></use>
+                    </svg>
+                  </li>
+                  <li class="social-icons">
+                    <svg class="second-icons" viewBox="192 0 32 32">
+                      <use href="images/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-members">
@@ -148,6 +170,28 @@
               <div class="member-cards">
                 <h3 class="members">Camilia Garcia</h3>
                 <p class="position">Marketing</p>
+                <ul class="social">
+                  <li class="social-icons">
+                    <svg class="second-icons" viewBox="144 0 32 32">
+                      <use href="images/sprite.svg#icon-instagram"></use>
+                    </svg>
+                  </li>
+                  <li class="social-icons">
+                    <svg class="second-icons" viewBox="240 0 32 32">
+                      <use href="images/sprite.svg#icon-twitter"></use>
+                    </svg>
+                  </li>
+                  <li class="social-icons">
+                    <svg class="second-icons" viewBox="0 0 32 32">
+                      <use href="images/sprite.svg#icon-facebook"></use>
+                    </svg>
+                  </li>
+                  <li class="social-icons">
+                    <svg class="second-icons" viewBox="192 0 32 32">
+                      <use href="images/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-members">
@@ -160,6 +204,28 @@
               <div class="member-cards">
                 <h3 class="members">Daniel Wilson</h3>
                 <p class="position">UI Designer</p>
+                <ul class="social">
+                  <li class="social-icons">
+                    <svg class="second-icons" viewBox="144 0 32 32">
+                      <use href="images/sprite.svg#icon-instagram"></use>
+                    </svg>
+                  </li>
+                  <li class="social-icons">
+                    <svg class="second-icons" viewBox="240 0 32 32">
+                      <use href="images/sprite.svg#icon-twitter"></use>
+                    </svg>
+                  </li>
+                  <li class="social-icons">
+                    <svg class="second-icons" viewBox="0 0 32 32">
+                      <use href="images/sprite.svg#icon-facebook"></use>
+                    </svg>
+                  </li>
+                  <li class="social-icons">
+                    <svg class="second-icons" viewBox="192 0 32 32">
+                      <use href="images/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
