--- a/index.html
+++ b/index.html
@@ -291,6 +291,31 @@
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
+        <div class="footer-media">
+          <h3>Social Media</h3>
+          <ul class="social">
+            <li class="social-icons">
+              <svg class="second-icons" viewBox="144 0 32 32">
+                <use href="images/sprite.svg#icon-instagram"></use>
+              </svg>
+            </li>
+            <li class="social-icons">
+              <svg class="second-icons" viewBox="240 0 32 32">
+                <use href="images/sprite.svg#icon-twitter"></use>
+              </svg>
+            </li>
+            <li class="social-icons">
+              <svg class="second-icons" viewBox="0 0 32 32">
+                <use href="images/sprite.svg#icon-facebook"></use>
+              </svg>
+            </li>
+            <li class="social-icons">
+              <svg class="second-icons" viewBox="192 0 32 32">
+                <use href="images/sprite.svg#icon-linkedin"></use>
+              </svg>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
