--- a/index.html
+++ b/index.html
@@ -236,45 +236,87 @@
           <h2 class="page-titles">Our Portfolio</h2>
           <ul class="our-portfolio">
             <li class="portf">
-              <img src="images/banking-app.jpg" alt="banking-app" />
+              <img class="image" src="images/banking-app.jpg" alt="banking-app" />
+              <div class="overlay">
+                <p class="text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="apps">
                 <h3>Banking App</h3>
                 <p>App</p>
               </div>
             </li>
             <li class="portf">
-              <img src="images/cashless-payment.png" alt="cashless-payment" />
+              <img class="image" src="images/cashless-payment.png" alt="cashless-payment" />
+              <div class="overlay">
+                <p class="text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="apps">
                 <h3>Cashless Payment</h3>
                 <p>Marketing</p>
               </div>
             </li>
             <li class="portf">
-              <img src="images/meditation-app.png" alt="meditation-app" />
+              <img class="image" src="images/meditation-app.png" alt="meditation-app" />
+              <div class="overlay">
+                <p class="text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="apps">
                 <h3>Meditation App</h3>
                 <p>App</p>
               </div>
             </li>
             <li class="portf">
-              <img src="images/taxi-service.jpg" alt="taxi-service" />
+              <img class="image" src="images/taxi-service.jpg" alt="taxi-service" />
+              <div class="overlay">
+                <p class="text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="apps">
                 <h3>Taxi Service</h3>
                 <p>Marketing</p>
               </div>
             </li>
             <li class="portf">
-              <img
+              <img class="image"
                 src="images/screen-illustrations.jpg"
                 alt="screen-illustrations"
               />
+              <div class="overlay">
+                <p class="text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="apps">
                 <h3>Screen Illustrations</h3>
                 <p>Design</p>
               </div>
             </li>
             <li class="portf">
-              <img src="images/online-courses.jpg" alt="online-courses" />
+              <img class="image" src="images/online-courses.jpg" alt="online-courses" />
+              <div class="overlay">
+                <p class="text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="apps">
                 <h3>Online Courses</h3>
                 <p>Marketing</p>
@@ -286,38 +328,39 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <div class="footer-p"><a class="title-footer" href="#"><span>WEB</span>STUDIO</a>
-        <p class="footer-p">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div class="footer-p">
+          <a class="title-footer" href="#"><span>WEB</span>STUDIO</a>
+          <p class="footer-p">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-media">
+          <h3 class="social-title">Social Media</h3>
+          <ul class="social">
+            <li class="social-icons">
+              <svg class="second-icons" viewBox="144 0 32 32">
+                <use href="images/sprite.svg#icon-instagram"></use>
+              </svg>
+            </li>
+            <li class="social-icons">
+              <svg class="second-icons" viewBox="240 0 32 32">
+                <use href="images/sprite.svg#icon-twitter"></use>
+              </svg>
+            </li>
+            <li class="social-icons">
+              <svg class="second-icons" viewBox="0 0 32 32">
+                <use href="images/sprite.svg#icon-facebook"></use>
+              </svg>
+            </li>
+            <li class="social-icons">
+              <svg class="second-icons" viewBox="192 0 32 32">
+                <use href="images/sprite.svg#icon-linkedin"></use>
+              </svg>
+            </li>
+          </ul>
+        </div>
       </div>
-      <div class="footer-media">
-        <h3 class="social-title">Social Media</h3>
-        <ul class="social">
-          <li class="social-icons">
-            <svg class="second-icons" viewBox="144 0 32 32">
-              <use href="images/sprite.svg#icon-instagram"></use>
-            </svg>
-          </li>
-          <li class="social-icons">
-            <svg class="second-icons" viewBox="240 0 32 32">
-              <use href="images/sprite.svg#icon-twitter"></use>
-            </svg>
-          </li>
-          <li class="social-icons">
-            <svg class="second-icons" viewBox="0 0 32 32">
-              <use href="images/sprite.svg#icon-facebook"></use>
-            </svg>
-          </li>
-          <li class="social-icons">
-            <svg class="second-icons" viewBox="192 0 32 32">
-              <use href="images/sprite.svg#icon-linkedin"></use>
-            </svg>
-          </li>
-        </ul>
-      </div>
-    </div>
     </footer>
   </body>
 </html>
