--- a/index.html
+++ b/index.html
@@ -236,7 +236,11 @@
           <h2 class="page-titles">Our Portfolio</h2>
           <ul class="our-portfolio">
             <li class="portf">
-              <img class="image" src="images/banking-app.jpg" alt="banking-app" />
+              <img
+                class="image"
+                src="images/banking-app.jpg"
+                alt="banking-app"
+              />
               <div class="overlay">
                 <p class="text">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -250,7 +254,11 @@
               </div>
             </li>
             <li class="portf">
-              <img class="image" src="images/cashless-payment.png" alt="cashless-payment" />
+              <img
+                class="image"
+                src="images/cashless-payment.png"
+                alt="cashless-payment"
+              />
               <div class="overlay">
                 <p class="text">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -264,7 +272,11 @@
               </div>
             </li>
             <li class="portf">
-              <img class="image" src="images/meditation-app.png" alt="meditation-app" />
+              <img
+                class="image"
+                src="images/meditation-app.png"
+                alt="meditation-app"
+              />
               <div class="overlay">
                 <p class="text">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -278,7 +290,11 @@
               </div>
             </li>
             <li class="portf">
-              <img class="image" src="images/taxi-service.jpg" alt="taxi-service" />
+              <img
+                class="image"
+                src="images/taxi-service.jpg"
+                alt="taxi-service"
+              />
               <div class="overlay">
                 <p class="text">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -292,7 +308,8 @@
               </div>
             </li>
             <li class="portf">
-              <img class="image"
+              <img
+                class="image"
                 src="images/screen-illustrations.jpg"
                 alt="screen-illustrations"
               />
@@ -309,7 +326,11 @@
               </div>
             </li>
             <li class="portf">
-              <img class="image" src="images/online-courses.jpg" alt="online-courses" />
+              <img
+                class="image"
+                src="images/online-courses.jpg"
+                alt="online-courses"
+              />
               <div class="overlay">
                 <p class="text">
                   14 Stylish and User-Friendly App Design Concepts · Task
