--- a/index.html
+++ b/index.html
@@ -27,12 +27,45 @@
           <ul class="ul-nav">
             <li>
               <a class="second-nav" href="#">Studio</a>
+              <svg class="underline">
+                <rect
+                  width="48px"
+                  height="4px"
+                  x="0"
+                  y="44"
+                  rx="2"
+                  ry="2"
+                  fill="#404bbf"
+                ></rect>
+              </svg>
             </li>
             <li>
               <a class="second-nav" href="#">Portfolio</a>
+              <svg class="underline">
+                <rect
+                  width="65px"
+                  height="4px"
+                  x="0"
+                  y="44"
+                  rx="2"
+                  ry="2"
+                  fill="#404bbf"
+                ></rect>
+              </svg>
             </li>
             <li>
               <a class="second-nav" href="#">Contacts</a>
+              <svg class="underline">
+                <rect
+                  width="65px"
+                  height="4px"
+                  x="0"
+                  y="44"
+                  rx="2"
+                  ry="2"
+                  fill="#404bbf"
+                ></rect>
+              </svg>
             </li>
           </ul>
         </nav>
@@ -57,7 +90,7 @@
           <ul class="page-menu-list">
             <li class="menu-li">
               <svg class="first-icons" viewBox="288 0 75 32">
-                <use href="images/sprite.svg#icon-antenna"></use>
+                <use href="images/icons.svg#icon-antenna"></use>
               </svg>
               <h3 class="menu-li-h">Strategy</h3>
               <p>
@@ -67,7 +100,7 @@
             </li>
             <li class="menu-li">
               <svg class="first-icons" viewBox="0 0 75 32">
-                <use href="images/sprite.svg#icon-clock"></use>
+                <use href="images/icons.svg#icon-clock"></use>
               </svg>
               <h3 class="menu-li-h">Punctuality</h3>
               <p>
@@ -77,7 +110,7 @@
             </li>
             <li class="menu-li">
               <svg class="first-icons" viewBox="48 0 75 32">
-                <use href="images/sprite.svg#icon-graph"></use>
+                <use href="images/icons.svg#icon-graph"></use>
               </svg>
               <h3 class="menu-li-h">Diligence</h3>
               <p>
@@ -87,7 +120,7 @@
             </li>
             <li class="menu-li">
               <svg class="first-icons" viewBox="384 0 75 32">
-                <use href="images/sprite.svg#icon-astronaut"></use>
+                <use href="images/icons.svg#icon-astronaut"></use>
               </svg>
               <h3 class="menu-li-h">Technologies</h3>
               <p>
@@ -110,22 +143,22 @@
                 <ul class="social">
                   <li class="social-icons">
                     <svg class="second-icons" viewBox="144 0 32 32">
-                      <use href="images/sprite.svg#icon-instagram"></use>
+                      <use href="images/icons.svg#icon-instagram"></use>
                     </svg>
                   </li>
                   <li class="social-icons">
                     <svg class="second-icons" viewBox="240 0 32 32">
-                      <use href="images/sprite.svg#icon-twitter"></use>
+                      <use href="images/icons.svg#icon-twitter"></use>
                     </svg>
                   </li>
                   <li class="social-icons">
                     <svg class="second-icons" viewBox="0 0 32 32">
-                      <use href="images/sprite.svg#icon-facebook"></use>
+                      <use href="images/icons.svg#icon-facebook"></use>
                     </svg>
                   </li>
                   <li class="social-icons">
                     <svg class="second-icons" viewBox="192 0 32 32">
-                      <use href="images/sprite.svg#icon-linkedin"></use>
+                      <use href="images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </li>
                 </ul>
@@ -139,22 +172,22 @@
                 <ul class="social">
                   <li class="social-icons">
                     <svg class="second-icons" viewBox="144 0 32 32">
-                      <use href="images/sprite.svg#icon-instagram"></use>
+                      <use href="images/icons.svg#icon-instagram"></use>
                     </svg>
                   </li>
                   <li class="social-icons">
                     <svg class="second-icons" viewBox="240 0 32 32">
-                      <use href="images/sprite.svg#icon-twitter"></use>
+                      <use href="images/icons.svg#icon-twitter"></use>
                     </svg>
                   </li>
                   <li class="social-icons">
                     <svg class="second-icons" viewBox="0 0 32 32">
-                      <use href="images/sprite.svg#icon-facebook"></use>
+                      <use href="images/icons.svg#icon-facebook"></use>
                     </svg>
                   </li>
                   <li class="social-icons">
                     <svg class="second-icons" viewBox="192 0 32 32">
-                      <use href="images/sprite.svg#icon-linkedin"></use>
+                      <use href="images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </li>
                 </ul>
@@ -173,22 +206,22 @@
                 <ul class="social">
                   <li class="social-icons">
                     <svg class="second-icons" viewBox="144 0 32 32">
-                      <use href="images/sprite.svg#icon-instagram"></use>
+                      <use href="images/icons.svg#icon-instagram"></use>
                     </svg>
                   </li>
                   <li class="social-icons">
                     <svg class="second-icons" viewBox="240 0 32 32">
-                      <use href="images/sprite.svg#icon-twitter"></use>
+                      <use href="images/icons.svg#icon-twitter"></use>
                     </svg>
                   </li>
                   <li class="social-icons">
                     <svg class="second-icons" viewBox="0 0 32 32">
-                      <use href="images/sprite.svg#icon-facebook"></use>
+                      <use href="images/icons.svg#icon-facebook"></use>
                     </svg>
                   </li>
                   <li class="social-icons">
                     <svg class="second-icons" viewBox="192 0 32 32">
-                      <use href="images/sprite.svg#icon-linkedin"></use>
+                      <use href="images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </li>
                 </ul>
@@ -207,22 +240,22 @@
                 <ul class="social">
                   <li class="social-icons">
                     <svg class="second-icons" viewBox="144 0 32 32">
-                      <use href="images/sprite.svg#icon-instagram"></use>
+                      <use href="images/icons.svg#icon-instagram"></use>
                     </svg>
                   </li>
                   <li class="social-icons">
                     <svg class="second-icons" viewBox="240 0 32 32">
-                      <use href="images/sprite.svg#icon-twitter"></use>
+                      <use href="images/icons.svg#icon-twitter"></use>
                     </svg>
                   </li>
                   <li class="social-icons">
                     <svg class="second-icons" viewBox="0 0 32 32">
-                      <use href="images/sprite.svg#icon-facebook"></use>
+                      <use href="images/icons.svg#icon-facebook"></use>
                     </svg>
                   </li>
                   <li class="social-icons">
                     <svg class="second-icons" viewBox="192 0 32 32">
-                      <use href="images/sprite.svg#icon-linkedin"></use>
+                      <use href="images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </li>
                 </ul>
@@ -361,22 +394,22 @@
           <ul class="social">
             <li class="social-icons">
               <svg class="second-icons" viewBox="144 0 32 32">
-                <use href="images/sprite.svg#icon-instagram"></use>
+                <use href="images/icons.svg#icon-instagram"></use>
               </svg>
             </li>
             <li class="social-icons">
               <svg class="second-icons" viewBox="240 0 32 32">
-                <use href="images/sprite.svg#icon-twitter"></use>
+                <use href="images/icons.svg#icon-twitter"></use>
               </svg>
             </li>
             <li class="social-icons">
               <svg class="second-icons" viewBox="0 0 32 32">
-                <use href="images/sprite.svg#icon-facebook"></use>
+                <use href="images/icons.svg#icon-facebook"></use>
               </svg>
             </li>
             <li class="social-icons">
               <svg class="second-icons" viewBox="192 0 32 32">
-                <use href="images/sprite.svg#icon-linkedin"></use>
+                <use href="images/icons.svg#icon-linkedin"></use>
               </svg>
             </li>
           </ul>
