--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   <body>
     <header class="header">
       <div class="container">
+        <a class="logo" href="#"><span>WEB</span>STUDIO</a>
         <nav class="first-nav">
-          <a class="logo" href="#"><span>WEB</span>STUDIO</a>
           <ul class="ul-nav">
             <li>
               <a class="second-nav" href="#">Studio</a>
@@ -69,7 +69,7 @@
             </li>
           </ul>
         </nav>
-        <address>
+        <address class="address">
           <ul class="nav-ul">
             <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
